--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "silly-name-maker",
-  "description": "Find out your silly name!",
+  "name": "instem-client-codes",
+  "description": "Find Instem Client Codes",
   "version": "0.0.1",
   "private": true,
   "license": "Apache Version 2.0",
