--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
   "dependencies": {
     "body-parser": "^1.15.2",
     "express": "^4.13.4",
-    "actions-on-google": "^1.0.0",
-    "mysql": "^2.5.4"
+    "actions-on-google": "^1.0.0"
   },
   "devDependencies": {
     "semistandard": "^9.1.0"
